--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@emailjs/browser": "^4.4.1",
+    "framer-motion": "^11.17.0",
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.5.3",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
