--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-vertical-timeline-component": "^3.5.3",
+    "tailwind-merge": "^2.6.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
