--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3",
-    "tailwind-merge": "^2.6.0",
-    "clsx": "^2.1.1"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
